<resources>

    <string name="app_name">Modulo android</string>
    <string name="yes_bt_text">Il bluetooth è stato abilitato</string>
    <string name="no_bt_text">Il bluetooth non è stato abilitato</string>
    <string name="ab_bt_text">L\'abilitazione del Bluetooth è stata interrotta</string>
    <string name="no_device_text">Il dispositivo non è stato associato.</string>
    <string name="assoc_bt_text">Il dispositivo è stato associato.</string>
    <string name="no_assoc_bt_text">Il dispositivo non è stato associato.</string>
    <string name="no_socket_bt_text">Il dispositivo non è stato connesso.</string>
    <string name="wait_text">Aspetta per tre secondi davanti alla porta prima di accedere.</string>
    <string name="logok_text">Fatti vedere dal PIR per procedere.</string>
    <string name="device_name_default">isi21</string>

    // Messaggi di errore legati al Username o Password
    <string name="empty_user">Compila Nome utente e Password.</string>
    <string name="wrong_user">L\'username o la password non sono corrette.</string>
    <string name="default_error">Mi sono chiuso male.</string>

    <string name="door_close">Ora la porta è chiusa</string>
    <string name="door_close_error">Non sono riuscito a chiudere la porta</string>

    // Elementi grafici.
    <string name="login_name_text">Inserire l\'username</string>
    <string name="login_pwd_text">Inserire la password</string>
    <string name="open_btn_text">Accedi alla porta</string>
    <string name="assoc_btn_text">Instaura connessione</string>
    <string name="close_btn_text">Chiudi la porta</string>

    // Messaggi per l'indoor.
    <string name="intensity_label_text">Puoi cambiare il valore dell\'insensità.</string>
    <string name="intensity_value_err">Il valore dell\'intensità deve essere compreso tra 0 e 100</string>
    <string name="intensity_btn_text">Cambia intensità</string>
    <string name="temperature_label_text">La temperatura attuale all\'interno della sala è di: </string>
    <string name="change_intensity_ok">Ho cambiato correttamente l\'intensità.</string>
    <string name="change_intensity_no">Non ho cambiato correttamente l\'intensità.</string>
</resources>
