<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/device_name_text"
            android:layout_margin="10dp"
            android:text="@string/device_name_default" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/assoc_btn_text"
            android:id="@+id/assoc_btn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name_text"
            android:layout_margin="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/name_text"
            android:layout_margin="10dp"
            android:enabled="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_pwd_text"
            android:layout_margin="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/pass_text"
            android:layout_margin="10dp"
            android:inputType="textPassword"
            android:enabled="false"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/open_btn_text"
            android:id="@+id/open_btn" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_text"
            android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>
